[tool.poetry]
name = "api-agenda"
version = "0.1.0"
description = ""
authors = ["Rodrigo Cristiano"]

[tool.poetry.dependencies]
python = "3.10.5"
fastapi = "^0.75.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
SQLAlchemy = "^1.4.36"
gunicorn = "^20.1.0"
uvloop = "^0.16.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
mimesis = "^5.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
